@@ -235,8 +235,7 @@ main (int argc, char *argv[])
 /*
  * Alternative to readline if readline is not available
  */
-static char *
-getline(const char *prompt)
+static char *_getline(const char *prompt)
 {
 	char buf[4096];
 	char *line;
@@ -274,7 +273,7 @@ _get_command (int *argc, char **argv)
 #if HAVE_READLINE
 	in_line = readline ("sacctmgr: ");
 #else
-	in_line = getline("sacctmgr: ");
+	in_line = _getline("sacctmgr: ");
 #endif
 	if (in_line == NULL)
 		return 0;
