@@ -10,6 +10,7 @@ documents those changes that are of interest to users and admins.
  -- -L, --allclusters now works with sacct
  -- Modified job table to use 32bit u/gids for those with ids greater 
     than 16 bits.
+ -- Made minor changes for slurm to compile cleanly under gcc 4.4.1
 
 * Changes in SLURM 2.0.7
 ========================
